force-app/main/default/objects/TTS_Inventor__c/TTS_Inventor__c.object-meta.xml
<CustomObject>
    <description>Represents an inventor or research contributor to a technology, including role, primary status, contribution details, and percentage share for distributions.</description>
    <label>Inventor</label>
    <nameField>
        <displayFormat>INVENT{000000}</displayFormat>
        <label>Inventor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>