force-app/main/default/objects/TTS_Inventor__c/fields/IP_AlternativeContact__c.field-meta.xml
<CustomField>
    <fullName>IP_AlternativeContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Contact who receives this inventor&apos;s percentage share instead of the original inventor.</description>
    <inlineHelpText>Select the alternative Contact who should receive distributions for this share.</inlineHelpText>
    <label>Alternative Distribution</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventors (Alternative Distribution)</relationshipLabel>
    <relationshipName>IP_Alternative_Contribution_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>