force-app/main/default/objects/TTS_Inventor__c/fields/IP_Contribution__c.field-meta.xml
<CustomField>
    <fullName>IP_Contribution__c</fullName>
    <description>Master-detail relationship linking the inventor contribution to its parent Technology.</description>
    <inlineHelpText>Select the technology to which this inventor or researcher contributed.</inlineHelpText>
    <label>IP</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipName>Contributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>