force-app/main/default/objects/TTS_Inventor__c/fields/IP_Contribution_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Contribution_Description__c</fullName>
    <description>Documents the inventor&apos;s research contribution and any relevant alternative distribution details.</description>
    <inlineHelpText>Describe this person&apos;s contribution to the research and any distribution context.</inlineHelpText>
    <label>Contribution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>