force-app/main/default/objects/TTS_Inventor__c/fields/IP_Inventor__c.field-meta.xml
<CustomField>
    <fullName>IP_Inventor__c</fullName>
    <description>Formula displaying the alternative distribution Contact&apos;s name when present; otherwise displays the original inventor&apos;s name.</description>
    <formula>IF(
ISBLANK( IP_AlternativeContact__r.FirstName ), 
 IP_Original_Inventor_Name__r.FirstName + &quot; &quot; +  IP_Original_Inventor_Name__r.LastName,
IP_AlternativeContact__r.FirstName + &quot; &quot; +  IP_AlternativeContact__r.LastName
)</formula>
    <inlineHelpText>Read-only current recipient name; an Alternative Distribution Contact overrides the Original Inventor.</inlineHelpText>
    <label>Inventor</label>
    <type>Text</type>
</CustomField>