force-app/main/default/objects/TTS_Inventor__c/fields/IP_Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>IP_Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this contributor is the primary inventor for the technology.</description>
    <inlineHelpText>Select for the single inventor designated as primary for the technology.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>