force-app/main/default/objects/TTS_Inventor__c/fields/IP_Original_Inventor_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Original_Inventor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identifies the Contact who originally contributed the inventor percentage share.</description>
    <inlineHelpText>Select the original inventor, researcher, or contributor represented by this record.</inlineHelpText>
    <label>Original Inventor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventors (Original Inventor)</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>