force-app/main/default/objects/TTS_Inventor__c/fields/Percentage_Share__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Share__c</fullName>
    <description>Stores the contributor&apos;s percentage share of the invention for ownership or royalty distribution.</description>
    <inlineHelpText>Enter this contributor&apos;s percentage share; all related shares together cannot exceed 100.</inlineHelpText>
    <label>Percentage Share</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>